reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_optional-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "allOf": [
                  {
                    "oneOf": [
                      {
                        "description": "Null",
                        "type": "null"
                      },
                      {
                        "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenInner"
                      }
                    ]
                  },
                  {
                    "type": "object",
                    "title": "reflectapi_demo.tests.serde.input.TestOptionalFlatten<reflectapi_demo.tests.serde.TestFlattenInner>",
                    "required": [
                      "code"
                    ],
                    "properties": {
                      "code": {
                        "$ref": "#/components/schemas/u16"
                      }
                    }
                  }
                ]
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "allOf": [
                    {
                      "oneOf": [
                        {
                          "description": "Null",
                          "type": "null"
                        },
                        {
                          "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestFlattenInner"
                        }
                      ]
                    },
                    {
                      "type": "object",
                      "title": "reflectapi_demo.tests.serde.output.TestOptionalFlatten<reflectapi_demo.tests.serde.TestFlattenInner>",
                      "required": [
                        "code"
                      ],
                      "properties": {
                        "code": {
                          "$ref": "#/components/schemas/u16"
                        }
                      }
                    }
                  ]
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestFlattenInner": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestFlattenInner",
        "required": [
          "inner_a",
          "inner_b"
        ],
        "properties": {
          "inner_a": {
            "$ref": "#/components/schemas/u32"
          },
          "inner_b": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u16": {
        "description": "16-bit unsigned integer",
        "type": "integer"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
