reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_two_instantiations-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < TestTwoInstantiations > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.TestTwoInstantiations,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.serde.TestTwoInstantiations, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface TestFlattenIfElse {
        code: number /* u16 */;
      }

      export interface TestFlattenInner {
        inner_a: number /* u32 */;
        inner_b: string;
      }

      export interface TestFlattenInnerAlt {
        alt_x: boolean;
      }

      export interface TestTwoInstantiations {
        a: reflectapi_demo.tests.serde.TestUpdateOrElse<
          reflectapi_demo.tests.serde.TestFlattenInner,
          reflectapi_demo.tests.serde.TestFlattenIfElse
        >;
        b: reflectapi_demo.tests.serde.TestUpdateOrElse<
          reflectapi_demo.tests.serde.TestFlattenInnerAlt,
          reflectapi_demo.tests.serde.TestFlattenIfElse
        >;
      }

      export type TestUpdateOrElse<T, C> = {
        if_else?: C | null;
      } & NullToEmptyObject<T>;
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.TestTwoInstantiations,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.TestTwoInstantiations,
        {},
        reflectapi_demo.tests.serde.TestTwoInstantiations,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
