reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_flatten_two_instantiations-3.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_rust_code :: < TestTwoInstantiations > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::serde::TestTwoInstantiations,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::serde::TestTwoInstantiations,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }

    #[cfg(feature = "reqwest")]
    impl Interface<reflectapi::rt::ReqwestClient<reqwest::Client>> {
        /// Convenience: build the client backed by a bare `reqwest::Client`
        /// and the given base URL. Hides the
        /// [`reflectapi::rt::ReqwestClient`] adapter so callers don't need
        /// to name it.
        pub fn try_new(
            client: reqwest::Client,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            Ok(Self::new(reflectapi::rt::ReqwestClient::try_new(
                client, base_url,
            )?))
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod serde {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestFlattenIfElse {
                    pub code: u16,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestFlattenInner {
                    pub inner_a: u32,
                    pub inner_b: std::string::String,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestFlattenInnerAlt {
                    pub alt_x: bool,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestTwoInstantiations {
                    pub a: super::super::super::reflectapi_demo::tests::serde::TestUpdateOrElse<
                        super::super::super::reflectapi_demo::tests::serde::TestFlattenInner,
                        super::super::super::reflectapi_demo::tests::serde::TestFlattenIfElse,
                    >,
                    pub b: super::super::super::reflectapi_demo::tests::serde::TestUpdateOrElse<
                        super::super::super::reflectapi_demo::tests::serde::TestFlattenInnerAlt,
                        super::super::super::reflectapi_demo::tests::serde::TestFlattenIfElse,
                    >,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestUpdateOrElse<T, C> {
                    #[serde(flatten)]
                    pub inner: T,
                    pub if_else: std::option::Option<C>,
                }
            }
        }
    }
}
